--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ dotenv = "0.15.0"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde_json = "1.0.120"
 sha1 = "0.10.6"
+clap = { version = "4.5.16", features = ["derive"] }
